--- a/picture_book/templates/accounts/family_registration.html
+++ b/picture_book/templates/accounts/family_registration.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <h1>家族アカウント登録</h1>
     <form method="POST">
         {% csrf_token %}
@@ -38,7 +38,7 @@
         </ul>
     {% endif %}
 
-        <input type="submit" value="登録">
+        <input type="submit" value="登録" style="display: block; margin: 0 auto;">
     </form>
 </div>
 {% endblock %}
