--- a/picture_book/templates/accounts/password_reset_form.html
+++ b/picture_book/templates/accounts/password_reset_form.html
@@ -8,7 +8,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ reset_form.as_p }}
-        <input type="submit" value="送信" >
+        <input type="submit" value="送信" style="display: block; margin: 0 auto;">
     </form>
 </div>
 {% endblock %}
