--- a/picture_book/templates/picture_book_app/reading_record_detail.html
+++ b/picture_book/templates/picture_book_app/reading_record_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="centered-container">
-    <h1 style="text-align: left;">絵本読み聞かせ記録の詳細</h1>
+    <h1 style="text-align: left;">読み聞かせ記録の詳細</h1>
 
     <!-- 1行目 -->
     <p><strong>絵本：</strong>{{ record.book.title }}</p>
