パスワードリセットエラー画面作ったのに表示されていないこと発覚のため修正

--- a/picture_book/templates/accounts/request_password_reset.html
+++ b/picture_book/templates/accounts/request_password_reset.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container1">
-    <h1>パスワードリセットエラー</h1>
+<div class="container2">
+    <h1 style="color: red;">パスワードリセットエラー</h1>
     {% if exception_notes %}
-    <p>エラー: {{ exception_notes }}</p>
+        <p>次のエラーが発生しました：</p>
+        <p>{{ exception_notes }}</p>
     {% else %}
-    <p>不明なエラーが発生しました。</p>
+        <p>不明なエラーが発生しました。</p>
     {% endif %}
+
+    <p><a href="{% url 'accounts:request_password_reset' %}">パスワード再設定をもう一度試す</a></p>
 </div> 
 {% endblock %}
