--- a/templates/top.html
+++ b/templates/top.html
@@ -21,7 +21,7 @@
                 <img src="{% static 'files/booklist.jpeg' %}" alt="本棚" style="width: 100%; height: auto; border-radius: 10px;">
             </div>
             <div style="max-width: 450px;">
-                <img src="{% atatic files/obentobus.png %}" alt="お弁当バス" style="width: 100%; height: auto; border-radius: 10px;">
+                <img src="{% static 'files/obentobus.png' %}" alt="お弁当バス" style="width: 100%; height: auto; border-radius: 10px;">
             </div>
         </div>
     
