--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,34 +1,45 @@
-{% extends "base.html" %}
-{% block content %}
-<div class="centered-container">
-    <h1>お話の足跡</h1>
-    <form method="POST">
-        {% csrf_token %}
-        <div class="form-group">
-            {{ login_form.email.label_tag }}
-            {{ login_form.email }}
-        </div>
+{% load static %}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <title>お話の足跡</title>
+</head>
+<body>
+    <div class="centered-container">
+        <h1>お話の足跡</h1>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ login_form.email.label_tag }}
+                {{ login_form.email }}
+            </div>
 
-        <div class="form-group">
-            {{ login_form.password.label_tag }}
-            {{ login_form.password }}
-        </div>
-        <input type="submit" value="ログイン">
-    </form>
+            <div class="form-group">
+                {{ login_form.password.label_tag }}
+                {{ login_form.password }}
+            </div>
+            <input type="submit" value="ログイン">
+        </form>
 
-    <p>
-        <a href="{% url 'accounts:request_password_reset' %}" style="color: #555555;">
-          ※パスワードを忘れた方はこちら
-        </a>
-      </p>
+        <p>
+            <a href="{% url 'accounts:request_password_reset' %}" style="color: #555555;">
+                ※パスワードを忘れた方はこちら
+            </a>
+        </p>
 
-    
+      
 
 
-    <h6>初めてご利用の方は</h6>
-        <a href="{% url 'accounts:regist' %}" style="color: #555555;">
-          アカウント登録
-        </a>
-    </p>
-</div>
-{% endblock %}
+        <h6>初めてご利用の方は</h6>
+            <a href="{% url 'accounts:regist' %}" style="color: #555555;">
+              アカウント登録
+            </a>
+        </p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
