--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -6,6 +6,13 @@
     <p>以下のメールアドレスにパスワード再設定用のURLをお送りしました。</p>
     <p>メールのご確認お願いいたします。</p>
     <p>{{ email }}</p>
+
+    <ul class="email-note">
+        <li>メールの受信までに数分かかる場合があります。</li>
+        <li>Gmailをご利用の方は、迷惑メールフォルダや「プロモーション」タブもご確認ください。</li>
+        <li>メールが届かない場合は、しばらく待ってから再度お試しください。</li>
+    </ul>
+
     <a href="{% url 'accounts:login' %}">ログイン</a>
 </div>
 {% endblock %}
